tests/valid/TupleType_Valid_2.whiley
(int,int) f(int x):
    return (x,x+2)

void main([string] args):
    x = f(1)
    println(str(x))
