tests/invalid/Function_CompileFail_1.whiley
void f(int x):
    asdkljkljg(x)

void main([string] args):
    f(1)
